@@ -43,6 +43,7 @@ enum
 //--------------
 #define DMG_SNIPER			(DMG_LASTGENERICFLAG<<1)	// This is sniper damage
 #define DMG_MISSILEDEFENSE	(DMG_LASTGENERICFLAG<<2)	// The only kind of damage missiles take. (special missile defense)
+#define DMG_MINIGUN			(DMG_LASTGENERICFLAG<<3)	// knockback
 
 #ifdef PONEDM
 #define PONEDM_PLAYER_INDEX_NONE			( MAX_PLAYERS + 1 )
