@@ -34,6 +34,7 @@
 	#include "hl2mp_cvars.h"
 	#include "gamestats.h"
 	#include "ponedm_bot.h"
+	#include "hl2/hl2_shareddefs.h"
 
 //#ifdef DEBUG	
 	//#include "hl2mp_bot_temp.h"
@@ -910,7 +911,7 @@ CAmmoDef *GetAmmoDef()
 		def.AddAmmoType("AR2AltFire",		DMG_DISSOLVE,				TRACER_NONE,			0,			0,			5,			0,							0 );
 		def.AddAmmoType("Pistol",			DMG_BULLET,					TRACER_LINE_AND_WHIZ,	0,			0,			225,		BULLET_IMPULSE(200, 1225),	0 );
 		def.AddAmmoType("SMG1",				DMG_BULLET,					TRACER_LINE_AND_WHIZ,	0,			0,			225,		BULLET_IMPULSE(200, 1225),	0 );
-		def.AddAmmoType("Gatling",			DMG_BULLET,					TRACER_LINE_AND_WHIZ,	0,			0,			500,		BULLET_IMPULSE(200, 1225),  0 );
+		def.AddAmmoType("Gatling",			DMG_BULLET | DMG_MINIGUN,					TRACER_LINE_AND_WHIZ,	0,			0,			500,		BULLET_IMPULSE(200, 1225),  0 );
 		def.AddAmmoType("357",				DMG_BULLET,					TRACER_LINE_AND_WHIZ,	0,			0,			48,			BULLET_IMPULSE(800, 5000),	0 );
 		def.AddAmmoType("XBowBolt",			DMG_BULLET,					TRACER_LINE,			0,			0,			25,			BULLET_IMPULSE(800, 8000),	0 );
 		def.AddAmmoType("Buckshot",			DMG_BULLET | DMG_BUCKSHOT,	TRACER_LINE,			0,			0,			45,			BULLET_IMPULSE(400, 1200),	0 );
